# vegetation-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  publish.yaml  release.yaml
src/: cli_args.rs  config.rs  connection.rs  main.rs  operations.rs
